Project YouTubeClone {
  database_type: "MySQL"
}

/* ==============================
   TABLES
============================== */

Table users {
  id int [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  avatar varchar(255) 
  banner varchar(255)
  country varchar(50)
  about text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table channels {
  id int [pk, increment]
  user_id int [not null]
  name varchar(100) [not null]
  description text
  banner_url varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  subscribers_count int [default: 0]
  total_views int [default: 0]
  total_videos int [default: 0]
}

Table categories {
  id int [pk, increment]
  name varchar(50) [unique, not null]
}

Table videos {
  id int [pk, increment]
  channel_id int [not null]
  title varchar(150) [not null]
  description text
  youtube_id varchar(20) [not null]
  thumbnail_url varchar(255)
  duration int [not null]
  resolution varchar(10) [default: "1080p"]
  category_id int
  views int [default: 0]
  is_private boolean [default: false]
  scheduled_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table tags {
  id int [pk, increment]
  name varchar(50) [unique, not null]
}

Table video_tags {
  id int [pk, increment]
  video_id int [not null]
  tag_id int [not null]
}

Table shorts {
  id int [pk, increment]
  channel_id int [not null]
  youtube_id varchar(20) [not null]
  title varchar(120)
  duration int [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table stories {
  id int [pk, increment]
  channel_id int [not null]
  media_url varchar(255) [not null]
  expires_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table subscriptions {
  id int [pk, increment]
  user_id int [not null]
  channel_id int [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table likes {
  id int [pk, increment]
  user_id int [not null]
  video_id int
  short_id int
  type varchar(10) [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table comments {
  id int [pk, increment]
  user_id int [not null]
  video_id int
  short_id int
  parent_id int
  content text [not null]
  likes int [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table history {
  id int [pk, increment]
  user_id int [not null]
  video_id int
  short_id int
  last_watched_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table playlists {
  id int [pk, increment]
  user_id int [not null]
  title varchar(150) [not null]
  is_private boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table playlist_videos {
  id int [pk, increment]
  playlist_id int [not null]
  video_id int [not null]
  position int [default: 0]
}

Table reports {
  id int [pk, increment]
  reporter_id int [not null]
  target_user_id int
  video_id int
  comment_id int
  reason text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table notifications {
  id int [pk, increment]
  user_id int [not null]
  type varchar(50) [not null]
  message text [not null]
  is_read boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table analytics {
  id int [pk, increment]
  video_id int [not null]
  views int [default: 0]
  likes int [default: 0]
  dislikes int [default: 0]
  comments int [default: 0]
  date date [not null]
}

Table ads {
  id int [pk, increment]
  advertiser varchar(100) [not null]
  media_url varchar(255) [not null]
  target_category_id int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table ad_impressions {
  id int [pk, increment]
  ad_id int [not null]
  user_id int
  video_id int
  watched_at timestamp [default: `CURRENT_TIMESTAMP`]
}

/* ==============================
   RELATIONSHIPS (FK)
============================== */

/* Users → Channels */
Ref: channels.user_id > users.id [delete: set null]

/* Channels → Videos */
Ref: videos.channel_id > channels.id [delete: cascade]

/* Categories → Videos */
Ref: videos.category_id > categories.id [delete: set null]

/* Videos → Tags (N:M) */
Ref: video_tags.video_id > videos.id [delete: cascade]
Ref: video_tags.tag_id > tags.id [delete: cascade]

/* Channels → Shorts / Stories */
Ref: shorts.channel_id > channels.id [delete: cascade]
Ref: stories.channel_id > channels.id [delete: cascade]

/* Subscriptions */
Ref: subscriptions.user_id > users.id [delete: cascade]
Ref: subscriptions.channel_id > channels.id [delete: cascade]

/* Likes */
Ref: likes.user_id > users.id [delete: cascade]
Ref: likes.video_id > videos.id [delete: cascade]
Ref: likes.short_id > shorts.id [delete: cascade]

/* Comments */
Ref: comments.user_id > users.id [delete: set null]
Ref: comments.video_id > videos.id [delete: cascade]
Ref: comments.short_id > shorts.id [delete: cascade]
Ref: comments.parent_id > comments.id [delete: cascade]

/* History */
Ref: history.user_id > users.id [delete: cascade]
Ref: history.video_id > videos.id [delete: cascade]
Ref: history.short_id > shorts.id [delete: cascade]

/* Playlists */
Ref: playlists.user_id > users.id [delete: cascade]
Ref: playlist_videos.playlist_id > playlists.id [delete: cascade]
Ref: playlist_videos.video_id > videos.id [delete: cascade]

/* Reports */
Ref: reports.reporter_id > users.id [delete: cascade]
Ref: reports.target_user_id > users.id [delete: set null]
Ref: reports.video_id > videos.id [delete: cascade]
Ref: reports.comment_id > comments.id [delete: cascade]

/* Notifications */
Ref: notifications.user_id > users.id [delete: cascade]

/* Analytics */
Ref: analytics.video_id > videos.id [delete: cascade]

/* Ads */
Ref: ads.target_category_id > categories.id [delete: set null]

/* Ad Impressions */
Ref: ad_impressions.ad_id > ads.id [delete: cascade]
Ref: ad_impressions.user_id > users.id [delete: set null]
Ref: ad_impressions.video_id > videos.id [delete: cascade]
